Fix old worlds with multiworld enabled not being deleted properly during clean up